--- a/tutorials/freezing.html
+++ b/tutorials/freezing.html
@@ -35,6 +35,7 @@
           rowHeaders: true,
           colHeaders: true,
           colWidths: 100,
+          fixedRowsTop: 1,
           fixedColumnsLeft: 2,
           contextMenu: true,
           manualColumnFreeze: true
